==> RIOT-OS/RIOT/cpu/saml21/periph/gpio.c <==
#include "cpu.h"
#include "periph/gpio.h"
#include "periph_conf.h"
#include "saml21_periph.h"
#include "sched.h"
#include "thread.h"
#include "panic.h"
#define ENABLE_DEBUG (1)
#include "debug.h"
#define GPIO_EXTI0_POS 0
#define GPIO_EXTI1_POS GPIO_EXTI0_EN
#define GPIO_EXTI2_POS (GPIO_EXTI1_POS + GPIO_EXTI1_EN)
#define GPIO_EXTI3_POS (GPIO_EXTI2_POS + GPIO_EXTI2_EN)
#define GPIO_EXTI4_POS (GPIO_EXTI3_POS + GPIO_EXTI3_EN)
#define GPIO_EXTI5_POS (GPIO_EXTI4_POS + GPIO_EXTI4_EN)
#define GPIO_EXTI6_POS (GPIO_EXTI5_POS + GPIO_EXTI5_EN)
#define GPIO_EXTI7_POS (GPIO_EXTI6_POS + GPIO_EXTI6_EN)
#define GPIO_EXTI8_POS (GPIO_EXTI7_POS + GPIO_EXTI7_EN)
#define GPIO_EXTI9_POS (GPIO_EXTI8_POS + GPIO_EXTI8_EN)
#define GPIO_EXTI10_POS (GPIO_EXTI9_POS + GPIO_EXTI9_EN)
#define GPIO_EXTI11_POS (GPIO_EXTI10_POS + GPIO_EXTI10_EN)
#define GPIO_EXTI12_POS (GPIO_EXTI11_POS + GPIO_EXTI11_EN)
#define GPIO_EXTI13_POS (GPIO_EXTI12_POS + GPIO_EXTI12_EN)
#define GPIO_EXTI14_POS (GPIO_EXTI13_POS + GPIO_EXTI13_EN)
#define GPIO_EXTI15_POS (GPIO_EXTI14_POS + GPIO_EXTI14_EN)
#define GPIO_EXTI_TOTAL (\
    GPIO_EXTI0_EN + \
    GPIO_EXTI1_EN + \
    GPIO_EXTI2_EN + \
    GPIO_EXTI3_EN + \
    GPIO_EXTI4_EN + \
    GPIO_EXTI5_EN + \
    GPIO_EXTI6_EN + \
    GPIO_EXTI7_EN + \
    GPIO_EXTI8_EN + \
    GPIO_EXTI9_EN + \
    GPIO_EXTI10_EN + \
    GPIO_EXTI11_EN + \
    GPIO_EXTI12_EN + \
    GPIO_EXTI13_EN + \
    GPIO_EXTI14_EN + \
    GPIO_EXTI15_EN)

int gpio_init_out(gpio_t dev, gpio_pp_t pushpull)
{
    if (dev >= GPIO_NUMOF) {
        return -1;
    }

    PortGroup* port = _port(dev);
    uint32_t pin = _pin(dev);

    /* configure as output */
    port->DIRSET.reg = 1 << pin;

    /* configure the pin's pull resistor state */
    switch (pushpull) {
        case GPIO_PULLDOWN:
            return -1;
        case GPIO_PULLUP:
            port->PINCFG[pin].bit.PULLEN = true;
            break;
        case GPIO_NOPULL:
            port->PINCFG[pin].bit.PULLEN = false;
            break;
    }

    return 0;
}

int gpio_init_in(gpio_t dev, gpio_pp_t pushpull)
{
    if (dev >= GPIO_NUMOF) {
        return -1;
    }

    PortGroup* port = _port(dev);
    uint32_t pin = _pin(dev);

    /* configure as input */
    port->DIRCLR.reg = 1 << pin;
    /* buffer input value */
    port->PINCFG[pin].bit.INEN = true;

    /* configure the pin's pull resistor state */
    switch (pushpull) {
        case GPIO_PULLDOWN:
            port->OUTCLR.reg = 1 << pin;
            port->PINCFG[pin].bit.PULLEN = true;
            break;
        case GPIO_PULLUP:
            port->OUTSET.reg = 1 << pin;
            port->PINCFG[pin].bit.PULLEN = true;
            break;
        case GPIO_NOPULL:
            port->PINCFG[pin].bit.PULLEN = false;
            break;
    }

    return 0;
}

int gpio_init_int(gpio_t dev, gpio_pp_t pullup, gpio_flank_t flank, gpio_cb_t cb, void *arg)
{
    if (dev >= GPIO_NUMOF) {
        return -1;
    }

    uint32_t pin = _pin(dev);
    uint32_t extint = pin % 16;

    int exti_pos = gpio_exti_map[extint];
    if (exti_pos == -1) {
        /* EXTI line not enabled. */
        return -1;
    }

    int res = 0;

    /* set pin mux */
    gpio_init_mux(dev, 0);

    /* configure pin as input */
    res = gpio_init_in(dev, pullup);
    if (res < 0) {
        return res;
    }

    /* Turn on APB clock */
    MCLK->APBAMASK.reg |= MCLK_APBAMASK_EIC;

    /* setup GCLK for EIC */
    GCLK->PCHCTRL[EIC_GCLK_ID].reg = GCLK_PCHCTRL_CHEN | GCLK_PCHCTRL_GEN_GCLK0;

    /* Setup interrupt */
    NVIC_SetPriority(EIC_IRQn, 10);
    NVIC_EnableIRQ(EIC_IRQn);

    /* save callback */
    gpio_config[exti_pos].cb = cb;
    gpio_config[exti_pos].arg = arg;

    /* must disable EIC before configuring. */
    EIC->CTRLA.bit.ENABLE = false;

    /*Enable pin interrupt */
    EIC->INTFLAG.reg |= (1 << extint);
    EIC->INTENSET.reg = 1 << extint;

    /*Set config */
    uint8_t config_pos = (4 * (extint % 8));
    uint8_t config_reg    = extint / 8;
    /*Set flank detection */
    switch (flank) {
        case GPIO_FALLING:
            EIC->CONFIG[config_reg].reg
                        |= (EIC_CONFIG_SENSE0_FALL_Val << config_pos);
            break;
        case GPIO_RISING:
            EIC->CONFIG[config_reg].reg
                        |= (EIC_CONFIG_SENSE0_RISE_Val << config_pos);
            break;
        case GPIO_BOTH:
            EIC->CONFIG[config_reg].reg
                        |= (EIC_CONFIG_SENSE0_BOTH_Val << config_pos);
            break;
    }

    /*Enable external interrupts*/
    EIC->CTRLA.bit.ENABLE = true;
    return 0;
}

void gpio_irq_enable(gpio_t dev)
{
    uint32_t extint = _pin(dev) % 16;
    EIC->INTENSET.reg = 1 << extint;
}

void gpio_irq_disable(gpio_t dev)
{
    uint32_t extint = _pin(dev) % 16;
    EIC->INTENCLR.reg = 1 << extint;
}

int gpio_read(gpio_t dev)
{
    PortGroup* port = _port(dev);
    uint32_t pin = _pin(dev);
    int res = -1;

    res = port->IN.reg & (1 << pin);

    /* make sure we are not returning a negative value if bit 31 is set */
    if (res < -1) {
        res = 1;
    }

    return res;
}

void gpio_set(gpio_t dev)
{
    PortGroup* port = _port(dev);
    uint32_t pin = _pin(dev);

    port->OUTSET.reg = 1 << pin;
}

void gpio_clear(gpio_t dev)
{
    PortGroup* port = _port(dev);
    uint32_t pin = _pin(dev);
    port->OUTCLR.reg = 1 << pin;
}
